--- a/css/styles.css
+++ b/css/styles.css
@@ -11231,3 +11231,17 @@ body {
   font-size: 0.75rem;
   border-radius: 0.375rem !important;
 }
+
+
+
+#nav-hover:hover,
+#nav-hover.active {
+  background: #00337C;
+  margin-left: 4px;
+  margin-right: 4px;
+
+}
+
+#icon{
+  color: white;
+}
