--- a/css/styles.css
+++ b/css/styles.css
@@ -11258,3 +11258,9 @@ body {
   -moz-box-shadow: -2px 3px 8.5008px -0.5008px #000000;
   box-shadow: -2px 3px 8.5008px -0.5008px #000000;
 }
+
+#dashcard{
+  background: #6fa5ed;
+  background: -webkit-linear-gradient(82deg, #6fa5ed 0%, #475aff 100%);
+  background: linear-gradient(82deg, #6fa5ed 0%, #475aff 100%);
+}
