--- a/css/styles.css
+++ b/css/styles.css
@@ -11269,3 +11269,16 @@ input[type=radio] ,input[type=checkbox] {
   transform: scale(2);
 }
 
+.graph {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  margin-bottom: 20px;
+}
+
+.bar {
+  width: 100%;
+  background-color: #2196F3;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
